cabal-version:       2.4
name:                advent-of-code2021
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Techno Tecna
-- maintainer:
category:            Challenge
build-type:          Simple
extra-source-files:  README.md

executable aoc21
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:    Utils AoC01 AoC02 AoC03 AoC04 AoC05 AoC06 AoC07 AoC08
                      AoC09 AoC10 AoC11 AoC12
    build-depends:    base ^>=4.14.1.0,
                      filepath
    default-language: Haskell2010
